--- a/assets/custom.css
+++ b/assets/custom.css
@@ -377,6 +377,18 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   z-index:50;
 }
 
+.order-1{
+  order:1;
+}
+
+.order-2{
+  order:2;
+}
+
+.order-3{
+  order:3;
+}
+
 .\!m-0{
   margin:0px !important;
 }
@@ -509,6 +521,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .mt-auto{
   margin-top:auto;
+}
+
+.mt-36{
+  margin-top:9rem;
+}
+
+.mt-\[28\%\]{
+  margin-top:28%;
 }
 
 .block{
@@ -738,11 +758,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   background-color:rgb(246 190 0 / var(--tw-bg-opacity));
 }
 
-.bg-\[\#f5f5f5\]{
-  --tw-bg-opacity:1;
-  background-color:rgb(245 245 245 / var(--tw-bg-opacity));
-}
-
 .bg-gradient-to-b{
   background-image:linear-gradient(to bottom, var(--tw-gradient-stops));
 }
@@ -855,11 +870,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:1.5rem;
 }
 
-.py-4{
-  padding-top:1rem;
-  padding-bottom:1rem;
-}
-
 .pb-0{
   padding-bottom:0px;
 }
@@ -892,12 +902,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   padding-bottom:2.25rem;
 }
 
+.pl-0{
+  padding-left:0px;
+}
+
 .pl-10{
   padding-left:2.5rem;
 }
 
 .pl-2{
   padding-left:0.5rem;
+}
+
+.pr-0{
+  padding-right:0px;
 }
 
 .pr-10{
@@ -930,14 +948,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .pt-9{
   padding-top:2.25rem;
-}
-
-.pl-0{
-  padding-left:0px;
-}
-
-.pr-0{
-  padding-right:0px;
 }
 
 .text-left{
@@ -1023,6 +1033,14 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
 .italic{
   font-style:italic;
+}
+
+.leading-snug{
+  line-height:1.375;
+}
+
+.leading-tight{
+  line-height:1.25;
 }
 
 .\!text-white{
@@ -1256,8 +1274,16 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     display:flex;
   }
 
+  .md\:w-1\/3{
+    width:33.333333%;
+  }
+
   .md\:w-1\/4{
     width:25%;
+  }
+
+  .md\:w-2\/3{
+    width:66.666667%;
   }
 
   .md\:w-2\/5{
@@ -1278,6 +1304,22 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
 
   .md\:w-auto{
     width:auto;
+  }
+
+  .md\:w-\[45\%\]{
+    width:45%;
+  }
+
+  .md\:w-\[55\%\]{
+    width:55%;
+  }
+
+  .md\:w-\[40\.5\%\]{
+    width:40.5%;
+  }
+
+  .md\:w-\[59\.5\%\]{
+    width:59.5%;
   }
 
   .md\:flex-row{
