--- a/assets/custom.css
+++ b/assets/custom.css
@@ -519,16 +519,12 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   margin-top:2rem;
 }
 
-.mt-auto{
-  margin-top:auto;
-}
-
-.mt-36{
-  margin-top:9rem;
-}
-
 .mt-\[28\%\]{
   margin-top:28%;
+}
+
+.mt-auto{
+  margin-top:auto;
 }
 
 .block{
@@ -1035,10 +1031,6 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
   font-style:italic;
 }
 
-.leading-snug{
-  line-height:1.375;
-}
-
 .leading-tight{
   line-height:1.25;
 }
@@ -1258,6 +1250,10 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     margin-left:0.5rem;
   }
 
+  .md\:mr-2{
+    margin-right:0.5rem;
+  }
+
   .md\:mt-0{
     margin-top:0px;
   }
@@ -1274,16 +1270,8 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     display:flex;
   }
 
-  .md\:w-1\/3{
-    width:33.333333%;
-  }
-
   .md\:w-1\/4{
     width:25%;
-  }
-
-  .md\:w-2\/3{
-    width:66.666667%;
   }
 
   .md\:w-2\/5{
@@ -1298,28 +1286,20 @@ body.template-product #header:not(.stickyHeader) [tag-name = 'logo']{
     width:38%;
   }
 
-  .md\:w-\[62\%\]{
-    width:62%;
-  }
-
-  .md\:w-auto{
-    width:auto;
-  }
-
-  .md\:w-\[45\%\]{
-    width:45%;
-  }
-
-  .md\:w-\[55\%\]{
-    width:55%;
-  }
-
   .md\:w-\[40\.5\%\]{
     width:40.5%;
   }
 
   .md\:w-\[59\.5\%\]{
     width:59.5%;
+  }
+
+  .md\:w-\[62\%\]{
+    width:62%;
+  }
+
+  .md\:w-auto{
+    width:auto;
   }
 
   .md\:flex-row{
