--- a/sections/image-list-text.liquid
+++ b/sections/image-list-text.liquid
@@ -1,35 +1,29 @@
 {%- assign secSt = section.settings -%}
 
 {% if secSt.img != blank %}
-  <section section-name="image-list-text" class="{% render 'section-interva-set' , secSt:secSt %}" >
-
-    <div style="background-color:{{secSt.bg_color}};">
-
-      <div class="page-width px-4 mx-auto flex">
+  <section section-name="image-list-text" style="background-color:{{secSt.bg_color}};" class="{% render 'section-interva-set' , secSt:secSt %}" >
+    <div class="page-width px-4 mx-auto flex">
 
 
-        <div class='md:w-[59.5%] {% if secSt.layout == "textImage" %}order-3{%else%}order-1{% endif %}' >
-          {{ secSt.img | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy' }}
+      <div class='md:w-[59.5%] {% if secSt.layout == "textImage" %}order-3{%else%}order-1{% endif %}' >
+        {{ secSt.img | image_url: width: 1000 | image_tag: width: nil, loading: 'lazy' }}
+      </div>
+      <div class="md:w-[40.5%] order-2 flex flex-col">
+        <div class="md:mr-2"> 
+          <h1 class="md:text-4_5xl text-2xl">{{ secSt.text_main  }}</h1>
+          <p class="text-lg md:mb-8 mb-4">{{ secSt.text_sub  }}</p>
+          <p class="text-lg text-black-600 md:mb-8 mb-4">{{ secSt.text_dec  }}</p>
         </div>
-        <div class="md:w-[40.5%] order-2 flex flex-col justify-between">
-          <div>
-            <h1 class="md:text-4_5xl text-2xl">{{ secSt.text_main  }}</h1>
-            <p class="text-lg md:mb-8 mb-4">{{ secSt.text_sub  }}</p>
-            <p class="text-lg text-black-600 md:mb-8 mb-4">{{ secSt.text_dec  }}</p>
-          </div>
-          <div class="flex flex-wrap mt-[28%]">
-            {% for block in section.blocks %}
-            {%- assign blkSt = block.settings -%}
-                <div class="w-1/3 mb-6">
-                  <p class="m-0 text-2xl font-semibold leading-tight">{{blkSt.item_title}}</p>
-                  <p class="m-0 text-base">{{blkSt.item_dec}}</p>
-                </div>
-            {% endfor %}
-          </div>
+        <div class="flex flex-wrap mt-[28%]">
+          {% for block in section.blocks %}
+          {%- assign blkSt = block.settings -%}
+              <div class="w-1/3 mb-6">
+                <p class="m-0 text-2xl font-semibold leading-tight">{{blkSt.item_title}}</p>
+                <p class="m-0 text-base">{{blkSt.item_dec}}</p>
+              </div>
+          {% endfor %}
         </div>
       </div>
-
-
     </div>
   </section>  
 {% endif %}
