--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -1,10 +1,10 @@
 {%- comment -%}
-------------------------------------------------------------------------------------------------------------------------
-NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing this theme as much as we did for
-  developing it. We have put a lot of work to make this theme as developer friendly as possible by offering you
-  hooks to integrate into critical parts of the theme. You will find the complete technical documentation (including
-  all events, dependencies...) in the "documentation.txt" file, located in the Assets folder.
-------------------------------------------------------------------------------------------------------------------------
+  ------------------------------------------------------------------------------------------------------------------------
+  NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing this theme as much as we did for
+    developing it. We have put a lot of work to make this theme as developer friendly as possible by offering you
+    hooks to integrate into critical parts of the theme. You will find the complete technical documentation (including
+    all events, dependencies...) in the "documentation.txt" file, located in the Assets folder.
+  ------------------------------------------------------------------------------------------------------------------------
 {%- endcomment -%}
 
 <!doctype html>
@@ -15,12 +15,22 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
     {% render 'tracking-AW-11207842177' %}
     {% render 'tracking-Ptengine-tag' %}
     {% render 'tracking-GTM-NKZHFLW7' %}
-    
+
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=1.0">
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, height=device-height, minimum-scale=1.0, maximum-scale=1.0"
+    >
     <meta name="theme-color" content="{{ settings.header_background }}">
 
-    <title>{% if page_title == blank %}{{ shop.name }}{% else %}{{ page_title }}{% if current_page != 1 %} &ndash; {{ 'general.page' | t: page: current_page }}{% endif %}{% endif %}</title>
+    <title>
+      {% if page_title == blank -%}
+        {{- shop.name -}}
+      {%- else -%}
+        {{- page_title -}}
+        {%- if current_page != 1 %} &ndash; {{ 'general.page' | t: page: current_page }}{% endif -%}
+      {%- endif %}
+    </title>
 
     {%- if page_description -%}
       <meta name="description" content="{{ page_description | escape }}">
@@ -51,31 +61,34 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
     {%- render 'css-variables' -%}
     {%- render 'js-variables' -%}
 
-    <script src="{{ 'jquery.min.js' | asset_url }}"  ></script>
+    <script src="{{ 'jquery.min.js' | asset_url }}"></script>
     <script defer type="module" src="{{ 'vendor.min.js' | asset_url }}"></script>
     <script defer type="module" src="{{ 'theme.js' | asset_url }}"></script>
     <script defer type="module" src="{{ 'sections.js' | asset_url }}"></script>
     <script defer type="module" src="{{ 'custom.js' | asset_url }}"></script>
     <script defer type="module" src="{{ 'flickity.pkgd.min.js' | asset_url }}"></script>
-    <script defer src="{{ 'swiper.js' | asset_url }}" ></script>
-
+    <script defer src="{{ 'swiper.js' | asset_url }}"></script>
 
     {{ content_for_header }}
     {{ 'swiper.css' | asset_url | stylesheet_tag }}
     {{- 'theme.css' | asset_url | stylesheet_tag: preload: true -}}
     {{- 'tw-custom.css' | asset_url | stylesheet_tag: preload: true -}}
     {{- 'flickity.min.css' | asset_url | stylesheet_tag: preload: true -}}
-
   </head>
-
 
   <body class="{% if settings.show_page_transition %}page-transition{% endif %} {% if settings.zoom_image_on_hover %}zoom-image--enabled{% endif %}">
     <!-- Google Tag Manager (noscript) -->
-    <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-NKZHFLW7"
-    height="0" width="0" style="display:none;visibility:hidden"></iframe></noscript>
+    <noscript
+      ><iframe
+        src="https://www.googletagmanager.com/ns.html?id=GTM-NKZHFLW7"
+        height="0"
+        width="0"
+        style="display:none;visibility:hidden"
+      ></iframe
+    ></noscript>
     <!-- End Google Tag Manager (noscript) -->
-   
- {%- render 'shadow-dom-templates' -%}
+
+    {%- render 'shadow-dom-templates' -%}
 
     <a href="#main" class="skip-to-content sr-only">{{ 'general.accessibility.skip_to_content' | t }}</a>
 
@@ -88,7 +101,10 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
       {%- endif -%}
     {%- endif -%}
 
-    {%- if request.page_type == 'customers/account' or request.page_type == 'customers/order' or request.page_type == 'customers/addresses' -%}
+    {%- if request.page_type == 'customers/account'
+      or request.page_type == 'customers/order'
+      or request.page_type == 'customers/addresses'
+    -%}
       {%- section 'account-banner' -%}
     {%- endif -%}
 
@@ -96,8 +112,8 @@ NOTE TO DEVELOPERS: welcome to Impact theme! We hope that you will enjoy editing
       {{ content_for_layout }}
 
       {%- comment -%}
-      IMPLEMENTATION NOTE: due to the very complex logic of margin/padding collapsing in Impact, the footer group is
-      added into the main element to ensure that dynamic sections added into the footer group are properly laid out.
+        IMPLEMENTATION NOTE: due to the very complex logic of margin/padding collapsing in Impact, the footer group is
+        added into the main element to ensure that dynamic sections added into the footer group are properly laid out.
       {%- endcomment -%}
       {%- if request.page_type != 'password' -%}
         {%- sections 'footer-group' -%}
