--- a/assets/tw-custom.css
+++ b/assets/tw-custom.css
@@ -118,8 +118,16 @@
   bottom: 1rem;
 }
 
+.tw-bottom-\[-43px\]{
+  bottom: -43px;
+}
+
 .tw-left-0{
   left: 0px;
+}
+
+.tw-left-1\/2{
+  left: 50%;
 }
 
 .tw-left-4{
@@ -132,6 +140,14 @@
 
 .tw-top-0{
   top: 0px;
+}
+
+.tw-bottom-12{
+  bottom: 3rem;
+}
+
+.tw-bottom-1{
+  bottom: 0.25rem;
 }
 
 .tw-z-\[1\]{
@@ -222,6 +238,10 @@
   margin-bottom: 2rem;
 }
 
+.tw-mb-\[55px\]{
+  margin-bottom: 55px;
+}
+
 .tw-ml-2{
   margin-left: 0.5rem;
 }
@@ -298,6 +318,14 @@
   height: 100%;
 }
 
+.tw-min-h-\[126px\]{
+  min-height: 126px;
+}
+
+.tw-min-h-48{
+  min-height: 12rem;
+}
+
 .tw-w-1\/2{
   width: 50%;
 }
@@ -326,6 +354,26 @@
   width: 100%;
 }
 
+.tw-w-screen{
+  width: 100vw;
+}
+
+.tw-min-w-\[126px\]{
+  min-width: 126px;
+}
+
+.tw-min-w-48{
+  min-width: 12rem;
+}
+
+.tw-max-w-\[280px\]{
+  max-width: 280px;
+}
+
+.tw-max-w-full{
+  max-width: 100%;
+}
+
 .tw-flex-1{
   flex: 1 1 0%;
 }
@@ -334,8 +382,17 @@
   flex-shrink: 0;
 }
 
+.-tw-translate-x-1\/2{
+  --tw-translate-x: -50%;
+  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
+}
+
 .tw-cursor-pointer{
   cursor: pointer;
+}
+
+.tw-flex-col{
+  flex-direction: column;
 }
 
 .tw-flex-wrap{
@@ -364,6 +421,10 @@
 
 .tw-gap-4{
   gap: 1rem;
+}
+
+.tw-gap-2{
+  gap: 0.5rem;
 }
 
 .tw-overflow-hidden{
@@ -404,6 +465,10 @@
 
 .tw-border-2{
   border-width: 2px;
+}
+
+.tw-border-\[3px\]{
+  border-width: 3px;
 }
 
 .tw-border-b{
@@ -488,6 +553,14 @@
   padding: 1rem;
 }
 
+.tw-p-8{
+  padding: 2rem;
+}
+
+.tw-p-6{
+  padding: 1.5rem;
+}
+
 .tw-px-2{
   padding-left: 0.5rem;
   padding-right: 0.5rem;
@@ -496,6 +569,16 @@
 .tw-px-4{
   padding-left: 1rem;
   padding-right: 1rem;
+}
+
+.tw-px-\[18px\]{
+  padding-left: 18px;
+  padding-right: 18px;
+}
+
+.tw-px-\[20px\]{
+  padding-left: 20px;
+  padding-right: 20px;
 }
 
 .tw-py-1{
@@ -511,6 +594,16 @@
 .tw-py-6{
   padding-top: 1.5rem;
   padding-bottom: 1.5rem;
+}
+
+.tw-px-8{
+  padding-left: 2rem;
+  padding-right: 2rem;
+}
+
+.tw-py-8{
+  padding-top: 2rem;
+  padding-bottom: 2rem;
 }
 
 .tw-pb-0{
@@ -533,6 +626,18 @@
   padding-bottom: 2rem;
 }
 
+.tw-pb-\[20px\]{
+  padding-bottom: 20px;
+}
+
+.tw-pb-\[30px\]{
+  padding-bottom: 30px;
+}
+
+.tw-pb-\[40px\]{
+  padding-bottom: 40px;
+}
+
 .tw-pt-0{
   padding-top: 0px;
 }
@@ -553,12 +658,32 @@
   padding-top: 2rem;
 }
 
+.tw-pt-\[10px\]{
+  padding-top: 10px;
+}
+
+.tw-pt-\[25px\]{
+  padding-top: 25px;
+}
+
+.tw-pt-\[30px\]{
+  padding-top: 30px;
+}
+
+.tw-pt-2{
+  padding-top: 0.5rem;
+}
+
 .tw-text-left{
   text-align: left;
 }
 
 .tw-text-center{
   text-align: center;
+}
+
+.tw-text-right{
+  text-align: right;
 }
 
 .tw-text-2xl{
@@ -574,6 +699,14 @@
 .tw-text-4xl{
   font-size: 2.25rem;
   line-height: 2.5rem;
+}
+
+.tw-text-\[65px\]{
+  font-size: 65px;
+}
+
+.tw-text-\[70px\]{
+  font-size: 70px;
 }
 
 .tw-text-base{
@@ -612,6 +745,10 @@
   font-style: italic;
 }
 
+.tw-leading-none{
+  line-height: 1;
+}
+
 .tw-leading-relaxed{
   line-height: 1.625;
 }
@@ -637,6 +774,10 @@
 
 .tw-line-through{
   text-decoration-line: line-through;
+}
+
+.tw-opacity-0{
+  opacity: 0;
 }
 
 .tw-transition-all{
@@ -1108,6 +1249,12 @@
   width: 100%;
 }
 
+@media (min-width: 640px){
+  .sm\:tw-justify-between{
+    justify-content: space-between;
+  }
+}
+
 @media (min-width: 769px){
   .md\:tw-bottom-8{
     bottom: 2rem;
@@ -1170,6 +1317,10 @@
     margin-left: 1.5rem;
   }
 
+  .md\:tw-mr-\[39px\]{
+    margin-right: 39px;
+  }
+
   .md\:tw-mt-0{
     margin-top: 0px;
   }
@@ -1200,6 +1351,10 @@
 
   .md\:tw-mt-8{
     margin-top: 2rem;
+  }
+
+  .md\:tw-mr-8{
+    margin-right: 2rem;
   }
 
   .md\:tw-flex{
@@ -1234,12 +1389,28 @@
     width: 100%;
   }
 
+  .md\:tw-max-w-none{
+    max-width: none;
+  }
+
+  .md\:tw-max-w-\[280px\]{
+    max-width: 280px;
+  }
+
   .md\:tw-items-center{
     align-items: center;
   }
 
   .md\:tw-justify-normal{
     justify-content: normal;
+  }
+
+  .md\:tw-justify-center{
+    justify-content: center;
+  }
+
+  .md\:tw-gap-4{
+    gap: 1rem;
   }
 
   .md\:tw-rounded-3xl{
@@ -1258,6 +1429,10 @@
     padding: 1rem;
   }
 
+  .md\:tw-p-8{
+    padding: 2rem;
+  }
+
   .md\:tw-px-2{
     padding-left: 0.5rem;
     padding-right: 0.5rem;
@@ -1268,9 +1443,24 @@
     padding-right: 2rem;
   }
 
+  .md\:tw-px-\[10\%\]{
+    padding-left: 10%;
+    padding-right: 10%;
+  }
+
+  .md\:tw-px-\[52px\]{
+    padding-left: 52px;
+    padding-right: 52px;
+  }
+
   .md\:tw-py-2{
     padding-top: 0.5rem;
     padding-bottom: 0.5rem;
+  }
+
+  .md\:tw-px-12{
+    padding-left: 3rem;
+    padding-right: 3rem;
   }
 
   .md\:tw-pb-0{
@@ -1325,6 +1515,14 @@
     padding-top: 2rem;
   }
 
+  .md\:tw-pt-\[85px\]{
+    padding-top: 85px;
+  }
+
+  .md\:tw-pt-24{
+    padding-top: 6rem;
+  }
+
   .md\:tw-text-left{
     text-align: left;
   }
@@ -1347,6 +1545,10 @@
   .md\:tw-text-5xl{
     font-size: 3rem;
     line-height: 1;
+  }
+
+  .md\:tw-text-\[75px\]{
+    font-size: 75px;
   }
 
   .md\:tw-text-base{
